--- a/guess.css
+++ b/guess.css
@@ -8,7 +8,8 @@
     height: 250px;
     /* margin :auto; */
 
-    background-color: darkslategray;
+    /* background-color: darkslategray; */
+    background-color: #ffcc00;
     /* margin-top: 20px; */
 
     
