Background re-change

--- a/guess.css
+++ b/guess.css
@@ -8,8 +8,8 @@
     height: 250px;
     /* margin :auto; */
 
-    /* background-color: darkslategray; */
-    background-color: #ffcc00;
+    background-color: darkslategray;
+    /* background-color: #ffcc00; */
     /* margin-top: 20px; */
 
     
